--- a/src/index.css
+++ b/src/index.css
@@ -1,6 +1,16 @@
+@font-face {
+    font-family: Loopy;
+    src: url("SouvenirStd-DemiItalic.otf") format("opentype");
+}
+
+* {
+}
+
 html {
     margin: 1rem;
+    background-color: #e4e4e4;
     font-size: 20pt;
+    font-family: sans-serif;
 }
 
 label {
@@ -8,6 +18,32 @@ label {
     margin-bottom: 0.5rem;
 }
 
-input {
+input, label {
     font-size: inherit;
+}
+
+input[type=submit] {
+    font-size: 1.5rem;
+    margin-top: 1em;
+}
+
+h1, h2 {
+    font-family: Loopy, sans-serif;
+    text-transform: uppercase;
+    margin-bottom: 0;
+}
+
+h1 {
+    color: deepskyblue;
+    text-shadow: 2px 2px 1px rgba(0,0,0,30%);
+}
+
+h2 {
+    color: hotpink;
+    text-shadow: 2px 2px 1px rgba(0,0,0,30%);
+}
+
+p.description {
+    font-size: 0.7rem;
+    color: #444;
 }
